fix: images scale to fix on smaller screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -106,7 +106,7 @@ a {
 .crt-post {
     border: 2px solid black;
     margin: 2.5vh auto;
-    width: clamp(350px, 35vw, 80vw)
+    width: clamp(380px, 35vw, 80vw)
 }
 
 .crt-post h2 {
@@ -149,7 +149,7 @@ a {
 
 .post-list-items {
     margin-bottom: 5vh;
-    width: clamp(390px, 35vw, 600px);
+    width: clamp(380px, 35vw, 600px);
 }
 
 .post-username {
